implementado o metodo  addLast(E element)